feat: - Finished gRPC API - Made both HTTP and gRPC run concurrently - renamed some stuff
